# agtop

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: alerts.rs  main.rs  model.rs  pricing.rs  processes.rs  report.rs  ui.rs  watcher.rs
src/sources/: claude.rs  codex.rs  mod.rs
