[package]
name = "agtop"
version = "0.1.0"
edition = "2021"
description = "htop-like TUI for local AI coding agent sessions (Claude Code, Codex)"
license = "MIT"
repository = "https://github.com/d1maash/agtop"
homepage = "https://github.com/d1maash/agtop"
readme = "README.md"
keywords = ["tui", "ai", "claude", "codex", "monitoring"]
categories = ["command-line-utilities"]

[[bin]]
name = "agtop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# cargo-dist configuration (populated by `dist init`)
[workspace.metadata.dist]
