[package]
name = "agtop"
version = "0.2.1"
edition = "2021"
description = "htop-like TUI for local AI coding agent sessions (Claude Code, Codex)"
license = "MIT"
repository = "https://github.com/d1maash/agtop"
homepage = "https://github.com/d1maash/agtop"
readme = "README.md"
keywords = ["tui", "ai", "claude", "codex", "monitoring"]
categories = ["command-line-utilities"]

[[bin]]
name = "agtop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# cargo-dist builds with this profile; inherit release optimizations.
[profile.dist]
inherits = "release"

# cargo-dist configuration
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "homebrew"]
tap = "d1maash/homebrew-tap"
publish-jobs = ["homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]
pr-run-mode = "plan"
install-path = "CARGO_HOME"
install-updater = false

